  tutorial. See tracker 2980809. The Help page needs an overhaul.
- Fixed a bug in which selecting an already selected raw or phase plot 
  analysis menu item would cause that menu item to be shown as unselected
  (no check mark). See tracker 2997675.
- Moved the 10-star list into a resource file in preparation to permit a 
  user-provided list can be used instead. See tracker 2892659.
   
Date: March 30 2010
Version: 1.0 Beta
Tag: http://vstar.svn.sourceforge.net/viewvc/vstar/tags/DEV-CS-30Mar2010
Key Changes:
- Date Compensated Discrete Fourier Transform (DC DFT) period analysis 
  implemented. This is a translation from Matthew Templeton's and Grant 
  Foster's DC DFT Fortran code. Plots of amplitude vs period and frequency, 
  and data tables (all results, top hits) are used to visualise the result. 
  Period analysis is carried out on the series which is the source of the 
  mean curve series as selected in the observations and mean plot mode. See 
  tracker 2942299 and Help page for more details. This should be considered
  to be a first attempt at period analysis and may change.
- Selecting a point in a plot now affects table row selection and vice versa.
  Each plot pane now has a "show cross hairs?" checkbox so cross-hairs can be
  made invisible if desired. See tracker 2917612.
- Re-ordered a number of observation list columns. See tracker 2952041.
- Changed format of doubles for means (JD, phase, mag) to have 4 decimal 
  places. See tracker 2947381.
- Observation details dialogs now only have discrepant checkboxes if the 
  observation is not a mean observation.
- Means list printing now works (but not saving yet).
- Made data pane (containing plots and table) scrollable for small (e.g. 
  800x600) screen sizes. See tracker 2947376.
- Invalid data table column auto-resizing disabled, forcing horizontal 
  scroll-bar to appear when columns resize beyond visible bounds of 
  containing-pane. Also, the column containing the offending observation 